Fix: Correção nos cors